--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Quality Assurance 4: Sudoku Solver",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon --delay 1000ms server.js",
     "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
